Added all html elements, removed now usless text.txt

--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
 </head>
 <body>
 
-  <h1>Hello, world!</h1>
+  <div class="socials-container">
+    <div class="socials-card">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="Profile Image">
+      <h2>Jessica Randall</h2>
+      <h4>London, United Kingdom</h4>
+      <p>"Front-end developer and avid reader"</p>
+      <div class="btn-container">
+        <button>GitHub</button>
+        <button>Frontend Mentor</button>
+        <button>LinkedIn</button>
+        <button>Twitter</button>
+        <button>Instagram</button>
+      </div>
+    </div>
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
