--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>Frontend Mentor | Social links profile</title>
+  <title>Social links profile | Aleandro Presta</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
