--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
 
   <div class="socials-container">
     <div class="socials-card">
-      <img src="./assets/images/avatar-jessica.jpeg" alt="Profile Image">
-      <h2 class="body-text">Jessica Randall</h2>
-      <h4 class="body-text">London, United Kingdom</h4>
-      <p>"Front-end developer and avid reader."</p>
+      <img src="https://raw.githubusercontent.com/AleandroPresta/personal-portfolio/master/assets/profile-pic.png" alt="Profile Image">
+      <h2 class="body-text">Aleandro Presta</h2>
+      <h4 class="body-text">Rende, Italia</h4>
+      <p>"Software Engineer"</p>
       <div class="btn-container">
-        <button>GitHub</button>
-        <button>Frontend Mentor</button>
-        <button>LinkedIn</button>
+        <button onclick="window.location.href='https://github.com/AleandroPresta'">GitHub</button>
+        
+        <button onclick="window.location.href='https://www.frontendmentor.io/profile/AleandroPresta'">Frontend Mentor</button>
+        <button onclick="window.location.href='https://www.linkedin.com/in/aleandro-presta-6523471b9/'">LinkedIn</button>
         <button>Twitter</button>
         <button>Instagram</button>
       </div>
